--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -12,7 +12,7 @@
 }
 
 /* BASIC STYLES */
-* {margin:0;padding:0;outline:0;vertical-align:baseline;word-wrap:break-word; /*font-size: 12px;*/}
+//* {margin:0;padding:0;outline:0;vertical-align:baseline;word-wrap:break-word; /*font-size: 12px;*/}
 body {background: #DEDED4 url(../images/structure/debut_light.png) repeat 0 0; /*border-top:5px solid #e56038;*/ font-family: 'Open Sans',sans-serif; /*font:14px/21px 'Open Sans',sans-serif;*/ color:#333333;
 -webkit-font-smoothing:antialiased;-webkit-text-size-adjust:100%;
 /*padding-top: 40px;*/ padding-top: 0;}
