--- a/app/views/topbar.html
+++ b/app/views/topbar.html
@@ -2,13 +2,16 @@
 <nav id="header" class="navbar navbar-custom navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only"><?php echo __('Toggle navigation'); ?></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/" title="Upela"><img src="images/header/logo-upela.png" alt=""/>Upela</a>
+      <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false" aria-controls="navbar">-->
+        <!--<span class="sr-only"><?php echo __('Toggle navigation'); ?></span>-->
+        <!--<span class="icon-bar"></span>-->
+        <!--<span class="icon-bar"></span>-->
+        <!--<span class="icon-bar"></span>-->
+      <!--</button>-->
+      <a class="navbar-brand" href="/" title="Upela">
+        <img src="images/header/logo-upela.png" alt=""/>
+        <span translate>MAIN.TITLE</span>
+      </a>
     </div>
     <div id="main-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav" id="main-navbar-nav">
@@ -81,45 +84,17 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown dropdown-lang">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="images/flags/1.jpg" title="English">
+            <img ng-src="{{selLanguage.image}}" title={{selLanguage.language}}>
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu" style="min-width: 0; max-width: 58px;">
-            <li>
-              <a href="#" title="fr">
-                <img src="images/flags/2.jpg" title="French">
-              </a>
-            </li>
-            <li>
-              <a href="#" title="ru">
-                <img src="images/flags/3.jpg" title="Spanish">
+            <li ng-repeat="language in languages" ng-if="selLanguage !== language">
+              <a href="#" title={{language.language}} ng-click="selectLanguage(language)">
+                <img ng-src="{{language.image}}" title={{language.language}}>
               </a>
             </li>
           </ul>
         </li>
-
-        <!--<?php if (User::isAuthenticatedAndNotGuest()) { ?>-->
-        <!--<li class="dropdown">-->
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> <?php echo truncate_text(User::getSessionValue('fullname'), 26); ?> <span class="caret"></span></a>-->
-          <!--<ul class="dropdown-menu">-->
-            <!--&lt;!&ndash;<li class="divider"></li>&ndash;&gt;-->
-            <!--<li><a href="<?php echo Language::getUrl('/account/logout.php'); ?>"><span class="glyphicon glyphicon-off"></span> <?php echo __('Logout'); ?></a></li>-->
-          <!--</ul>-->
-        <!--</li>-->
-
-        <!--<li class="dropdown">-->
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-th"></span> <?php echo __('My account'); ?> <span class="caret"></span></a>-->
-          <!--<ul class="dropdown-menu">-->
-            <!--<li><a href="<?php echo Meta::getUrl('/account/'); ?>"><span class="glyphicon glyphicon-th"></span> <?php echo __('My account'); ?></a></li>-->
-            <!--<li><a href="<?php echo Meta::getUrl('/account/'); ?>"><span class="fa fa-paper-plane"></span> <?php echo __('My shipments'); ?></a></li>-->
-            <!--<li><a href="<?php echo Meta::getUrl('/account/invoices.php'); ?>"><span class="fa fa-file-text"></span> <?php echo __('My invoices'); ?></a></li>-->
-            <!--<li><a href="<?php echo Meta::getUrl('/account/payments.php'); ?>"><span class="fa fa-list"></span> <?php echo __('My payments'); ?></a></li>-->
-            <!--<li><a href="<?php echo Meta::getUrl('/address/'); ?>"><span class="fa fa-book"></span> <?php echo __('My contacts'); ?></a></li>-->
-            <!--<li><a href="<?php echo Meta::getUrl('/account/information.php'); ?>"><span class="fa fa-cogs"></span> <?php echo __('Settings'); ?></a></li>-->
-          <!--</ul>-->
-        <!--</li>-->
-
-        <!--<?php } else { ?>-->
 
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Login</a></li>
 
