--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,37 +6,26 @@
           <img src="images/loading.gif" alt="">&nbsp;&nbsp;Please wait...
         </div>
 
-        <!-- success message section-->
-        <!--<div class="alert alert-success">-->
-          <!--<?php echo $_SESSION['success_message']; ?>-->
-        <!--</div>-->
-        <!--<?php unset($_SESSION['success_message']); } ?>-->
-
-        <!--<?php if (isset($_SESSION['error_message']) && !empty($_SESSION['error_message'])) { ?>-->
-        <!--<div class="alert alert-danger">-->
-          <!--<?php echo $_SESSION['error_message']; ?>-->
-        <!--</div>-->
-        <!--<?php unset($_SESSION['error_message']); } ?>-->
         <div id="home-top">
-          <h1 id="h1-home">Upela: compare quotes from carriers for the delivery and tracking of your consignments, parcels or pallets for professionals or individuals</h1>
+          <h1 id="h1-home" translate="MAIN.PAGES.TITLE">Upela: compare quotes from carriers for the delivery and tracking of your consignments, parcels or pallets for professionals or individuals</h1>
           <div id="carousel-home" class="carousel slide" data-ride="carousel" data-interval="6000">
             <div class="carousel-inner">
               <div class="item" style="background-image: url('images/files/upload/home/slider/slide6.jpg');">
                 <div class="carousel-caption" style="margin-right: -740px; top: 260px;">
-                  <h4 class="orange" style="margin-bottom: 7px;">E-merchants</h4>
-                  <div class="espace-pro-headline2" style="margin-bottom: 10px;">
+                  <h4 class="orange" style="margin-bottom: 7px;" translate="MAIN.PAGES.PAGE_ONE.E_MERCHANTS">E-merchants</h4>
+                  <div class="espace-pro-headline2" style="margin-bottom: 10px;" translate="MAIN.PAGES.PAGE_ONE.TEXT">
                     Centralize all your sendings<br>Save time, avoid mistakes
                   </div>
-                  <a class="btn btn-orange" href="https://www.upela.com/en/transportation-module-plugin-29.html">See all our connectors</a>
+                  <a class="btn btn-orange" href="#">See all our connectors</a>
                 </div>
               </div>
               <div class="item active" style="background-image: url('images/files/upload/home/slider/slide2.jpg');">
                 <div class="carousel-caption">
-                  <h3 style="margin-bottom: 7px;">N°1 for the PROs</h3>
-                  <div class="espace-pro-headline">
+                  <h3 style="margin-bottom: 7px;" translate="MAIN.PAGES.PAGE_TWO.PRO">N°1 for the PROs</h3>
+                  <div class="espace-pro-headline" translate="MAIN.PAGES.PAGE_TWO.TEXT">
                     +20,000 customers<br> Immediate discounts <br> Deferred payment by Sepa
                   </div>
-                  <a class="btn btn-orange" href="https://www.upela.com/en/my-account/login#register">Create a professional account</a>
+                  <a class="btn btn-orange" href="#">Create a professional account</a>
                 </div>
               </div>
               <div class="item" style="background-image: url('images/files/upload/home/slider/slide1.jpg');">
@@ -44,69 +33,72 @@
                   <div class="black-bg" style="width: 232px;">
                     <div class="reduction-tag" style="background-image: url('images/files/upload/home/slider/reduction-tag-en.png');">Up to -70%</div>
                     <div id="tarifs-particuliers">
-                      <h3>Delivery Day+1 <small>*</small></h3>
-                      <h4>More than 220 destinations</h4>
+                      <h3 translate="MAIN.PAGES.PAGE_THREE.TITLE1">Delivery Day+1 <small>*</small></h3>
+                      <h4 translate="MAIN.PAGES.PAGE_THREE.TITLE2">More than 220 destinations</h4>
                       <table cellspacing="0" cellpadding="0" border="0" class="destination-prices">
                         <tbody>
                           <tr height="26">
-                            <td width="140" class="destination">Europe</td>
+                            <td width="140" class="destination" translate="MAIN.PAGES.PAGE_THREE.EUROPE">Europe</td>
                             <td width="61" class="price">11.57€</td>
                           </tr>
                           <tr height="6">
                             <td colspan="3"></td>
                           </tr>
                           <tr height="26">
-                            <td class="destination">USA</td>
+                            <td class="destination" translate="MAIN.PAGES.PAGE_THREE.USA">USA</td>
                             <td class="price">28.42€</td>
                           </tr>
                           <tr height="6">
                             <td colspan="3"></td>
                           </tr>
                           <tr height="26">
-                            <td class="destination">Middle East</td>
+                            <td class="destination" translate="MAIN.PAGES.PAGE_THREE.MIDDLE_EAST">Middle East</td>
                             <td class="price">25.35€</td>
                           </tr>
                           <tr height="6">
                             <td colspan="3"></td>
                           </tr>
                           <tr height="26">
-                            <td class="destination">Africa</td>
+                            <td class="destination" translate="MAIN.PAGES.PAGE_THREE.AFRICA">Africa</td>
                             <td class="price">25.35€</td>
                           </tr>
                           <tr height="6">
                             <td colspan="3"></td>
                           </tr>
                           <tr height="26">
-                            <td class="destination">Asia</td>
+                            <td class="destination" translate="MAIN.PAGES.PAGE_THREE.ASIA">Asia</td>
                             <td class="price">25.35€</td>
                           </tr>
                         </tbody>
                       </table>
-                      <p style="font-size: 12px; margin-bottom: 5px;">Public rates tax inc.<small>*</small><a class="pull-right text-underline orange" href="https://www.upela.com/en/my-account/login#register">&gt;&nbsp;PRO rate?</a></p>
-                      <p class="last" style="font-size: 12px; margin-left: 0px; margin-bottom: -5px;"><small>(* from)</small></p>
+                      <p style="font-size: 12px; margin-bottom: 5px;">
+                        <span translate="MAIN.PAGES.PAGE_THREE.FOOTER.TITLE"></span><small>*</small>
+                        <a class="pull-right text-underline orange" href="#" translate="MAIN.PAGES.PAGE_THREE.FOOTER.LINK">&gt;&nbsp;PRO rate?</a>
+                      </p>
+                      <p class="last" style="font-size: 12px; margin-left: 0px; margin-bottom: -5px;"><small translate="MAIN.PAGES.PAGE_THREE.FOOTER.FOOTER">(* from)</small></p>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="item" style="background-image: url('images/files/upload/home/slider/slide4.jpg');">
                 <div class="carousel-caption" style="padding-top: 90px;">
-                  <h3>Simplify your exports <br>with the express shipping leaders<br>at the lowest prices</h3>
+                  <h3 translate="MAIN.PAGES.PAGE_FOUR.TITLE">Simplify your exports <br>with the express shipping leaders<br>at the lowest prices</h3>
                   <ul class="icon-ok">
-                    <li>Door-to-Door Delivery</li>
-                    <li>Customs service included</li>
-                    <li>Personality Tip</li>
+                    <li translate="MAIN.PAGES.PAGE_FOUR.OPTION1">Door-to-Door Delivery</li>
+                    <li translate="MAIN.PAGES.PAGE_FOUR.OPTION2">Customs service included</li>
+                    <li translate="MAIN.PAGES.PAGE_FOUR.OPTION3">Personality Tip</li>
                   </ul>
                 </div>
               </div>
               <div class="item" style="background-image: url('images/files/upload/home/slider/slide3.jpg');">
                 <div class="carousel-caption" style="padding-top: 70px;">
-                  <h3 style="margin-bottom: 0;">Why the PROs<br>choose us?</h3>
+                  <h3 style="margin-bottom: 0;" translate="MAIN.PAGES.PAGE_FIVE.TITLE">Why the PROs<br>choose us?</h3>
                   <ul class="icon-ok">
-                    <li>to simplify their deliveries</li>
-                    <li>to gain time</li>
-                    <li>for our rates</li>
-                    <li>for our experience</li>
-                    <li>for our destinations</li>
+                    <li translate="MAIN.PAGES.PAGE_FIVE.OPTION1">to simplify their deliveries</li>
+                    <li translate="MAIN.PAGES.PAGE_FIVE.OPTION2">to gain time</li>
+                    <li translate="MAIN.PAGES.PAGE_FIVE.OPTION3">for our rates</li>
+                    <li translate="MAIN.PAGES.PAGE_FIVE.OPTION4">for our experience</li>
+                    <li translate="MAIN.PAGES.PAGE_FIVE.OPTION5">for our destinations</li>
                   </ul>
                 </div>
               </div>
@@ -125,7 +117,7 @@
                   </uib-tab-heading>
                   <form id="ShipmentRatingForm" class="form-horizontal" role="form" enctype="multipart/form-data" accept-charset="UTF-8" method="post">
                     <div class="form-group">
-                      <label for="type" class="control-label col-md-2 no-padding-right required-">
+                      <label class="control-label col-md-2 no-padding-right required-">
                         <span class="popmark" id="popmark-type" data-placement="right" data-title="Type" data-content="<b>Envelope</b> : envelope or document < 2.5 Kg<br><b>Parcel</b> : maximum weight 70 Kg, max Length 270 cm AND Length + 2 x Height <419 cm<br><b>Pallet</b> : max height 200 cm and max weight 3 tonnes (international only)<br><b>Bulky shipment</b> : max dimensions : 302 cm x 203 cm x 178 cm height (international only)" data-original-title="" title="">Type</span>
                       </label>
 
