--- a/app/views/topbar.html
+++ b/app/views/topbar.html
@@ -16,69 +16,73 @@
     <div id="main-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav" id="main-navbar-nav">
         <!--<li><a href="<?php echo Language::getUrl('/'); ?>"><?php echo __('Home'); ?></a></li>-->
-        <li><a href="/professional">Professionals</a></li>
+        <li><a href="/professional" translate="MAIN.MENU.PROFESSIONALS"></a></li>
 
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <span translate="MAIN.MENU.SERVICES.TITLE"></span><b class="caret"></b>
+          </a>
           <ul class="dropdown-menu">
             <li class="dropdown-submenu">
-              <a href="#">Destinations</a>
+              <a href="#">
+                <span translate>MAIN.MENU.SERVICES.DESTINATIONS.TITLE</span>
+              </a>
               <ul class="dropdown-menu">
-                <li><a href="#">Africa</a></li>
-                <li><a href="#">America</a></li>
-                <li><a href="#">Asia</a></li>
-                <li><a href="#">DOM-TOM</a></li>
-                <li><a href="#">Eastern Europe</a></li>
-                <li><a href="#">Europe</a></li>
-                <li><a href="#">Middle East</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.DESTINATIONS.AFRICA">Africa</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.DESTINATIONS.AMERICA">America</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.DESTINATIONS.ASIA">Asia</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.DESTINATIONS.DOM_TOM">DOM-TOM</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.DESTINATIONS.EASTERN_EUROPE">Eastern Europe</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.DESTINATIONS.EUROPE">Europe</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.DESTINATIONS.MIDDLE_EAST">Middle East</a></li>
                 <!--<li><a href="<?php echo Cms::getPageUrlByIdentifier('country-south-america'); ?>"><?php echo __('South America'); ?></a></li>-->
               </ul>
             </li>
 
             <li class="dropdown-submenu">
-              <a href="#">Express courier</a>
+              <a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.TITLE">Express courier</a>
               <ul class="dropdown-menu">
-                <li><a href="#">France</a></li>
-                <li><a href="#">Europe</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.FRANCE">France</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.EUROPE">Europe</a></li>
                 <hr style="margin: 5px 0;">
-                <li><a href="#">Aix en Provence</a></li>
-                <li><a href="#">Bordeaux</a></li>
-                <li><a href="#">Lille</a></li>
-                <li><a href="#">Lyon</a></li>
-                <li><a href="#">Marseille</a></li>
-                <li><a href="#">Montpellier</a></li>
-                <li><a href="#">Nantes</a></li>
-                <li><a href="#">Nice</a></li>
-                <li><a href="#">Paris</a></li>
-                <li><a href="#">Rennes</a></li>
-                <li><a href="#">Strasbourg</a></li>
-                <li><a href="#">Toulouse</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.AIX">Aix en Provence</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.BORDEAUX">Bordeaux</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.LILLE">Lille</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.LYON">Lyon</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.MARSEILLE">Marseille</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.MONTPELLIER">Montpellier</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.NANTES">Nantes</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.NICE">Nice</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.PARIS">Paris</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.RENNES">Rennes</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.STRASBOURG">Strasbourg</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.EXPRESS_COURIER.TOULOUSE">Toulouse</a></li>
               </ul>
             </li>
 
             <li class="dropdown-submenu">
-              <a href="#">Carriers</a>
+              <a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.TITLE">Carriers</a>
               <ul class="dropdown-menu">
-                <li><a href="#">Chronopost</a></li>
-                <li><a href="#">Colissimo</a></li>
-                <li><a href="#">DHL</a></li>
-                <li><a href="#">DPD</a></li>
-                <li><a href="#">FedEx</a></li>
-                <li><a href="#">Mondial Relay</a></li>
-                <li><a href="#">TNT</a></li>
-                <li><a href="#">UPS</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.CHRONOPOST">Chronopost</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.COLISSIMO">Colissimo</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.DHL">DHL</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.DPD">DPD</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.FEDEX">FedEx</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.MONDIAL">Mondial Relay</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.TNT">TNT</a></li>
+                <li><a href="#" translate="MAIN.MENU.SERVICES.CARRIERS.UPS">UPS</a></li>
               </ul>
             </li>
           </ul>
         </li>
 
-        <li><a href="#">Tracking</a></li>
+        <li><a href="#" translate="MAIN.MENU.TRACKING">Tracking</a></li>
 
-        <li><a href="#">Help</a></li>
+        <li><a href="#" translate="MAIN.MENU.HELP">Help</a></li>
 
-        <li><a href="#">Blog</a></li>
+        <li><a href="#" translate="MAIN.MENU.BLOG">Blog</a></li>
 
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" translate="MAIN.MENU.CONTACT">Contact</a></li>
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -96,9 +100,9 @@
           </ul>
         </li>
 
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Login</a></li>
+        <li><a href="#" translate="MAIN.MENU.LOGIN"><span class="glyphicon glyphicon-user"></span> Login</a></li>
 
-        <li><a href="#"><span class="fa fa-user-plus"></span> Register</a></li>
+        <li><a href="#" translate="MAIN.MENU.REGISTER"><span class="fa fa-user-plus"></span> Register</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
